# remsync

./: .gitignore  Cargo.toml  README.md  hacking-binary.md  on-disk.md  protocol.md  sync.md
remsync-api-client/: Cargo.toml
remsync-api-client/src/: lib.rs  ll.rs  util.rs
remsync-api-types/: Cargo.toml
remsync-api-types/src/: common.rs  lib.rs  notifications.rs  requests.rs  responses.rs  tokens.rs  websocket.rs
remsync-client/: Cargo.toml
remsync-client-types/: Cargo.toml
remsync-client-types/src/: lib.rs  local.rs  state.rs
resync-api-types/: Cargo.toml
resync-api-types/src/: requests.rs  responses.rs  websocket.rs
src/: cli.rs  main.rs  serversync.rs
