[package]
name = "remsync-api-client"
version = "0.1.0"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remsync-api-types = { path="../remsync-api-types" }
hyper = { git = "https://github.com/hyperium/hyper" }
http = "0.1"
serde_json = "1.0"